# digimic-rs

./: .gitignore  Cargo.toml  README.md  build.rs  commands.md
.github/workflows/: main.yml
digimic-app-rs/: Cargo.toml
digimic-app-rs/src/: digimic.rs  main.rs
digimic-com-rs/src/: data.rs  lib.rs
digimic-comm-rs/: Cargo.toml
digimic-comm-rs/src/: command.rs  data.rs  lib.rs
src/: digimic.rs  egui_log.rs  main.rs
