[package]
name = "digimic-comm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
crossbeam-channel = "0.5.8"
logos = "0.13.0"
serialport = "4.2.2"
log = "0.4.20"
